--- a/lecture8/pset8/homepage/about.html
+++ b/lecture8/pset8/homepage/about.html
@@ -37,7 +37,6 @@
                     </div>
                 </div>
             </nav>
-            
         </header>
 
         <main>
@@ -49,19 +48,17 @@
                         <p class="text">Im very cool guy ok</p>
                 </div>
             </div>
-
-            </div>
-
         </main>
+
         <footer class="bg-dark text-center text-white text-lg-start fixed-bottom">
             <!-- Copyright -->
-            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-                &copy 2023 Copyright
+            <div class="text-center p-3">
+                &copy; 2023 Copyright
             <!--
                 <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-            </div>
             -->
             <!-- Copyright -->
+            </div>
         </footer>
     </body>
 
