--- a/lecture8/pset8/homepage/projects.html
+++ b/lecture8/pset8/homepage/projects.html
@@ -8,6 +8,7 @@
         <link href="styles.css" rel="stylesheet">
         <title>My Webpage</title>
     </head>
+
     <body>
         <header class="header mt-2">
             <nav class="navbar navbar-expand-sm navbar-light">
@@ -37,7 +38,6 @@
                     </div>
                 </div>
             </nav>
-            
         </header>
 
         <main>
@@ -78,19 +78,18 @@
                     </div>
                 </div>
             </div>
-
-            <div class="mb-5" style="height:100px"></div>
-
+            <div class="mb-5 end-of-page"></div>
         </main>
+
         <footer class="bg-dark text-center text-white text-lg-start fixed-bottom">
             <!-- Copyright -->
-            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-                &copy 2023 Copyright
+            <div class="text-center p-3">
+                &copy; 2023 Copyright
             <!--
                 <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-            </div>
             -->
             <!-- Copyright -->
+            </div>
         </footer>
     </body>
 
