--- a/lecture8/pset8/homepage/contact.html
+++ b/lecture8/pset8/homepage/contact.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link href="styles.css" rel="stylesheet">
@@ -39,7 +39,6 @@
                     </div>
                 </div>
             </nav>
-
         </header>
 
         <main>
@@ -115,12 +114,10 @@
                             </div>
                         </div>
                         <button class="btn btn-dark mb-5 mt-2" type="submit" >Send</button>
-                        <div class="mb-5" style="height:100px"></div>
+                        <div class="mb-5 end-of-page"></div>
                     </form>
                 </div>
             </div>
-
-
         </main>
 
         <!-- Modal -->
@@ -142,12 +139,12 @@
         <footer class="bg-dark text-center text-white text-lg-start fixed-bottom">
             <!-- Copyright -->
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-                &copy 2023 Copyright
+                &copy; 2023 Copyright
                 <!--
                     <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-                    </div>
                 -->
                 <!-- Copyright -->
+            </div>
         </footer>
     </body>
 
