--- a/lecture8/pset8/homepage/index.html
+++ b/lecture8/pset8/homepage/index.html
@@ -6,6 +6,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link href="styles.css" rel="stylesheet">
+        <link rel="icon" href="./assets/braces.svg" type="image/svg+xml">
+        <script src="./scripts.js"></script>
         <title>My Webpage</title>
     </head>
     <body>
@@ -42,44 +44,44 @@
 
         <main>
             <div class="container align-items-center justify-content-center mt-5 px-5">
-                    <div class="row g-1 py-2 flex-lg-row-reverse">
+                <div class="row g-1 py-2 flex-lg-row-reverse">
                     <div class="col-md-6 text-center">
-                        <img src="assets/person-circle.svg" width="150px" alt="" style="margin-bottom:1.5rem; margin-top:1.5rem;">
+                        <img src="assets/person-circle.svg" width="150" alt="Person Image" id="personImg">
                     </div>
-                    <div class="col-md-6 text-center align-self-center mx-auto" style="margin-top:1.5rem;">
+                    <div class="col-md-6 text-center align-self-center mx-auto">
                         <h2 class="display-5 fw-bold lh-1 mb-3">I am Jorge Valente Jr.</h2>
                         <p class="text mb-6 fs-5">Computer Science Student at OSSU</p>
                     </div>
                 </div>
             </div>
+
             <div class="d-flex justify-content-center">
                 <div>
-                <button type="button" class="btn btn-dark d-flex align-items-center btn-block" onclick="window.open('https://linkedin.com/in/valentejorge', '_blank');" style="margin: 0.2rem; width:120px">
+                <button type="button" class="btn btn-dark d-flex align-items-center btn-block button-custom" onclick="openLink('https://linkedin.com/in/valentejorge');" >
                     <img src="assets/linkedin.svg" alt="" class="invert-img">
                     <span class="span-button">Linkedin</span>
                 </button>
 
                 </div>
                 <div>
-                <button type="button" class="btn btn-dark d-flex align-items-center btn-block" onclick="window.open('https://github.com/valentejorge', '_blank');" style="margin: 0.2rem; width:120px">
+                <button type="button" class="btn btn-dark d-flex align-items-center btn-block button-custom" onclick="openLink('https://github.com/valentejorge');">
                     <img src="assets/github.svg" alt="" class="invert-img">
-                    <span class="span-button">Github  </span>
+                    <span class="span-button">Github</span>
                 </button>
                 </div>
-                <div class="mb-5" style="height:100px"></div>
-
+                <div class="mb-5 end-of-page"></div>
             </div>
 
         </main>
         <footer class="bg-dark text-center text-white text-lg-start fixed-bottom">
             <!-- Copyright -->
-            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-                &copy 2023 Copyright
+            <div class="text-center p-3">
+                &copy; 2023 Copyright
             <!--
                 <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-            </div>
             -->
             <!-- Copyright -->
+            </div>
         </footer>
     </body>
 
