--- a/lecture8/pset8/homepage/contact.html
+++ b/lecture8/pset8/homepage/contact.html
@@ -113,7 +113,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="btn btn-dark mb-5 mt-2" type="submit" >Send</button>
+                        <button class="button-custom mb-5 mt-2" type="submit" >Send</button>
                         <div class="mb-5 end-of-page"></div>
                     </form>
                 </div>
@@ -131,7 +131,7 @@
                         Your message has been successfully sent.
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="button-custom" data-bs-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
