--- a/lecture8/pset8/homepage/index.html
+++ b/lecture8/pset8/homepage/index.html
@@ -57,15 +57,15 @@
 
             <div class="d-flex justify-content-center">
                 <div>
-                <button type="button" class="btn btn-dark d-flex align-items-center btn-block button-custom" onclick="openLink('https://linkedin.com/in/valentejorge');" >
-                    <img src="assets/linkedin.svg" alt="" class="invert-img">
+                <button type="button" class="link-button" onclick="openLink('https://linkedin.com/in/valentejorge');" >
+                    <img src="assets/linkedin.svg" alt="" class="icon invert-img">
                     <span class="span-button">Linkedin</span>
                 </button>
 
                 </div>
                 <div>
-                <button type="button" class="btn btn-dark d-flex align-items-center btn-block button-custom" onclick="openLink('https://github.com/valentejorge');">
-                    <img src="assets/github.svg" alt="" class="invert-img">
+                <button type="button" class="link-button" onclick="openLink('https://github.com/valentejorge');">
+                    <img src="assets/github.svg" alt="" class="icon invert-img">
                     <span class="span-button">Github</span>
                 </button>
                 </div>
