--- a/lecture8/pset8/homepage/projects.html
+++ b/lecture8/pset8/homepage/projects.html
@@ -6,6 +6,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link href="styles.css" rel="stylesheet">
+        <link rel="icon" href="./assets/braces.svg" type="image/svg+xml">
+        <link href="styles.css" rel="stylesheet">
         <title>My Webpage</title>
     </head>
 
@@ -52,7 +54,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-dark">Go somewhere</a>
+                                <a href="#" class="button-custom">Go somewhere</a>
                             </div>
                         </div>
                     </div>
@@ -62,7 +64,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-dark">Go somewhere</a>
+                                <a href="#" class="button-custom">Go somewhere</a>
                             </div>
                         </div>
                     </div>
@@ -72,7 +74,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-dark">Go somewhere</a>
+                                <a href="#" class="button-custom">Go somewhere</a>
                             </div>
                         </div>
                     </div>
