--- a/lecture8/pset8/homepage/about.html
+++ b/lecture8/pset8/homepage/about.html
@@ -41,6 +41,17 @@
         </header>
 
         <main>
+
+            <div class="container d-flex justify-content-end mt-4 px-5">
+                <div class="toggle">
+                    <img src="./assets/moon-fill.svg" alt="">
+                    <img src="./assets/sun-fill.svg" alt="">
+                </div>
+            </div>
+
+            <script src="./toggle.js"></script>
+
+
             <div class="container align-items-center justify-content-center mt-5 px-5">
                 <div class="row g-1 py-2">
                     <div class="col-md-12 text-center">
