--- a/lecture8/pset8/homepage/contact.html
+++ b/lecture8/pset8/homepage/contact.html
@@ -16,7 +16,7 @@
                 <div class="container-fluid">
                     <a class="navbar-brand" href="./index.html">
                         <img src="assets/braces.svg" alt="Braces" width="34">
-                        valentejorge
+                        <span class="text-b">valentejorge</span>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -42,6 +42,17 @@
         </header>
 
         <main>
+
+            <div class="container d-flex justify-content-end mt-4 px-5">
+                <div class="toggle">
+                    <img src="./assets/moon-fill.svg" alt="">
+                    <img src="./assets/sun-fill.svg" alt="">
+                </div>
+            </div>
+
+            <script src="./toggle.js"></script>
+
+
             <div class="container align-items-center justify-content-center mt-5 px-5">
                 <div class="row g-1 py-2 text-center">
                     <div class="col-md-12 text-center">
@@ -124,13 +135,13 @@
         <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <div class="modal-header">
+                    <div class="modal-header bg-w">
                         <h5 class="modal-title" id="exampleModalLabel">Sucess</h5>
                     </div>
-                    <div class="modal-body">
+                    <div class="modal-body bg-w">
                         Your message has been successfully sent.
                     </div>
-                    <div class="modal-footer">
+                    <div class="modal-footer bg-w">
                         <button type="button" class="button-custom" data-bs-dismiss="modal">Close</button>
                     </div>
                 </div>
