--- a/lecture8/pset8/homepage/projects.html
+++ b/lecture8/pset8/homepage/projects.html
@@ -17,7 +17,7 @@
                 <div class="container-fluid">
                     <a class="navbar-brand" href="./index.html">
                         <img src="assets/braces.svg" alt="Braces" width="34">
-                        valentejorge
+                        <span class="text-b">valentejorge</span>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -43,13 +43,24 @@
         </header>
 
         <main>
+
+            <div class="container d-flex justify-content-end mt-4 px-5">
+                <div class="toggle">
+                    <img src="./assets/moon-fill.svg" alt="">
+                    <img src="./assets/sun-fill.svg" alt="">
+                </div>
+            </div>
+
+            <script src="./toggle.js"></script>
+
+
             <div class="container align-items-center justify-content-center mt-5 px-5">
                 <div class="row g-1 py-2 text-center">
                     <div class="col-md-12 text-center">
                         <h2 class="display-5 fw-bold lh-1 mb-3">Projects</h2>
                     </div>
                     <div class="col-md-4 text-center">
-                        <div class="card border-light">
+                        <div class="card bg-w border-none">
                             <img src="/assets/braces.svg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
@@ -59,7 +70,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 text-center">
-                        <div class="card border-light">
+                        <div class="card bg-w border-none">
                             <img src="/assets/braces.svg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
@@ -69,7 +80,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 text-center">
-                        <div class="card border-light">
+                        <div class="card bg-w border-none">
                             <img src="/assets/braces.svg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
