--- a/lecture8/pset8/homepage/index.html
+++ b/lecture8/pset8/homepage/index.html
@@ -16,7 +16,7 @@
                 <div class="container-fluid">
                     <a class="navbar-brand" href="./index.html">
                         <img src="assets/braces.svg" alt="Braces" width="34">
-                        valentejorge
+                        <span class="text-b">valentejorge</span>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -43,6 +43,18 @@
         </header>
 
         <main>
+
+
+            <div class="container d-flex justify-content-end mt-4 px-5">
+                <div class="toggle">
+                    <img src="./assets/moon-fill.svg" alt="">
+                    <img src="./assets/sun-fill.svg" alt="">
+                </div>
+            </div>
+
+            <script src="./toggle.js"></script>
+
+
             <div class="container align-items-center justify-content-center mt-5 px-5">
                 <div class="row g-1 py-2 flex-lg-row-reverse">
                     <div class="col-md-6 text-center">
