--- a/lecture8/pset8/homepage/about.html
+++ b/lecture8/pset8/homepage/about.html
@@ -15,7 +15,7 @@
                 <div class="container-fluid">
                     <a class="navbar-brand" href="./index.html">
                         <img src="assets/braces.svg" alt="Braces" width="34">
-                        valentejorge
+                        <span class="text-b">valentejorge</span>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
